[YSPARK-490] add -Xverify:none for hive